--- a/ArrayRotatiojn/readme
+++ b/ArrayRotatiojn/readme
@@ -6,4 +6,4 @@ Rotate an array of n elements to the right by k steps.
 For example, with n = 7 and k = 3, the array [1,2,3,4,5,6,7] is rotated to [5,6,7,1,2,3,4]. How many different ways do you know to solve this problem? 
 
 We have two situation:
-k>n/2 and k<=n/2 => can create two approaches for these situation with Memory O(1) and time O(n) -> see explanation in mages files.
+k>n/2 and k<=n/2 => can create two approaches for these situations with Memory O(1) and time O(n) -> see explanation in mages files.
