--- a/Tree/readme
+++ b/Tree/readme
@@ -15,6 +15,22 @@ Classic Tree problems (on Java)
 
 Size
 Returns the number of nodes in the tree
-
+»
 Max Depth
 Returns the max root-to-leaf depth of the tree
+»
+In-Order: 
+Traverse  left  node,  current  node,  then  right  [usually  used  for  binary  search 
+trees]
+»
+Pre-Order: 
+Traverse current node, then left node, then right node
+»
+Post-Order: 
+Traverse left node, then right node, then current node
+»
+Insert Node: 
+On a binary search tree, we insert a value v, by comparing it to the root
+  If v 
+> root, we go right, and else we go left
+  We do this until we hit an empty spot in the tree
